packages/examples/packages/errors/snap.config.js
module.exports = {
  cliOptions: {
    port: 8002,
    src: './src/index.ts',
  },
};
